--- a/box-styles.css
+++ b/box-styles.css
@@ -4,5 +4,5 @@ h1, p {
 
 em, strong {
   background-color: #b2d6ff; /* light blue */
-  display: block;
+  display: inline; /* This is the default for em and strong */
 }
