Pad 50 pixels to each side of the h1 heading

--- a/box-styles.css
+++ b/box-styles.css
@@ -6,3 +6,7 @@ em, strong {
   background-color: #b2d6ff; /* light blue */
   display: inline; /* This is the default for em and strong */
 }
+
+h1 {
+  padding: 50px;
+}
