--- a/box-styles.css
+++ b/box-styles.css
@@ -10,3 +10,10 @@ em, strong {
 h1 {
   padding: 50px;
 }
+
+p {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
