--- a/box-styles.css
+++ b/box-styles.css
@@ -12,8 +12,5 @@ h1 {
 }
 
 p {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 20px 10px; /* padding: vertical horizontal */
 }
