--- a/box-styles.css
+++ b/box-styles.css
@@ -12,5 +12,5 @@ h1 {
 }
 
 p {
-  padding: 20px 10px; /* padding: vertical horizontal */
+  padding: 20px 0 20px 10px /* padding: top right bottom left */
 }
