--- a/box-styles.css
+++ b/box-styles.css
@@ -13,5 +13,6 @@ h1 {
 }
 
 p {
-  padding: 20px 0 20px 10px /* padding: top right bottom left */
+  padding: 20px 0 20px 10px; /* padding: top right bottom left */
+  margin-bottom: 50px;
 }
