--- a/box-styles.css
+++ b/box-styles.css
@@ -22,3 +22,13 @@ p {
 strong {
   padding: 50px;
 }
+
+div {
+  color: #fff;
+  background-color: #5995da;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #5d6063;
+  border-raidus: 5px;
+}
